Crear Archivo de Texto
Creación de Archivo de Texto de pagos realizados en el día para enviar a Cable Color

--- a/TareaProgramadaCableColor/TareaProgramadaCableColor.csproj
+++ b/TareaProgramadaCableColor/TareaProgramadaCableColor.csproj
@@ -33,8 +33,17 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -45,11 +54,52 @@
   <ItemGroup>
     <Compile Include="AUDHI.cs" />
     <Compile Include="Conexion\AS400.cs" />
+    <Compile Include="Conexion\cableColor.cs">
+      <DependentUpon>ModelCableColor.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Conexion\ModelCableColor.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ModelCableColor.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Conexion\ModelCableColor.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ModelCableColor.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Conexion\ModelCableColor.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ModelCableColor.edmx</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <EntityDeploy Include="Conexion\ModelCableColor.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>ModelCableColor.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="Conexion\ModelCableColor.edmx.diagram">
+      <DependentUpon>ModelCableColor.edmx</DependentUpon>
+    </None>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Conexion\ModelCableColor.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>ModelCableColor.Context.cs</LastGenOutput>
+      <DependentUpon>ModelCableColor.edmx</DependentUpon>
+    </Content>
+    <Content Include="Conexion\ModelCableColor.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>ModelCableColor.edmx</DependentUpon>
+      <LastGenOutput>ModelCableColor.cs</LastGenOutput>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
